<Added a media query to solve problem with navbar toggler on iPhone 5/SE>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,12 @@
     background-color: #1289a9;
 }
 
-
+/* -------------Media Queries ---------- */
+@media(max-width: 320px) {
+    .navbar img {
+        height: 103.5px;
+        width: 135px;
+    }
+}
 
 
